--- a/_src/assets/scss/components/_main-description.scss
+++ b/_src/assets/scss/components/_main-description.scss
@@ -9,9 +9,7 @@
 .second-section {
     background: $color-primary-200;
     text-align: center;
-    display:grid;
-    grid-template-rows: 30px 1fr 60px;
-    grid-gap: 45px;
+     
 }
 
 
